[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "C02map"
version = "0.1.0"
description = "CO2 mapping in 3 dimensions"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "pandas",
    "scipy",
    "numpy",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
]

[tool.black]
line-length = 88
target-version = ['py38']